# microvmac

./: .gitmodules  README.md  meson.build  notes.txt
_work/: VIAEMDEV.c
cfg/: CNFGGLOB.h  EMCONFIG.h  STRCONST.h  hw_config.h
docs/local/: catalan.html  czech.html  dutch.html  english.html  french.html  german.html  italian.html  polish.html  pt_BR.html  spanish.html  sr_latn.html
src/: CFGMAN.cpp  GLOBGLUE.cpp  PROGMAIN.cpp  SYSDEPNS.h  config.cpp  config.h  config_manage.cpp  config_manage.h  error_codes.h  global_glue.cpp  global_glue.h  mac_main.cpp  mac_main.h  sys_dependencies.h  ticks.cpp  ticks.h
src/HW/: hardware.cpp  hardware.h  wires.cpp  wires.h
src/HW/ADB/: ADBEMDEV.cpp  ADBSHARE.h  adb.cpp  adb.h  adb_share.h
src/HW/DISK/: IWMEMDEV.cpp  SONYEMDV.cpp  int_woz_machine.cpp  int_woz_machine.h  sony_floppy.cpp  sony_floppy.h
src/HW/KBRD/: KBRDEMDV.cpp  keyboard.cpp  keyboard.h  keycodes.h
src/HW/M68K/: DISAM68K.cpp  FPCPEMDV.cpp  FPMATHEM.h  M68KITAB.cpp  MINEM68K.cpp  cpu_68k.cpp  cpu_68k.h  disassembly_68k.cpp  disassembly_68k.h  fpu.cpp  fpu_math.h  instruct_table_68k.cpp  instruct_table_68k.h
src/HW/MOUSE/: MOUSEMDV.cpp  mouse.cpp  mouse.h
src/HW/POWERMAN/: PMUEMDEV.cpp  power.cpp  power.h
src/HW/RAM/: ram.cpp  ram.h
src/HW/ROM/: ROMEMDEV.cpp  rom.cpp  rom.h
src/HW/RTC/: RTCEMDEV.cpp  rtc.cpp  rtc.h
src/HW/SCC/: SCCEMDEV.cpp  serial_comm.cpp  serial_comm.h
src/HW/SCREEN/: SCRNEMDV.cpp  screen.cpp  screen.h  screen_trans.h
src/HW/SCSI/: SCSIEMDV.cpp  scsi.cpp  scsi.h
src/HW/SOUND/: ASCEMDEV.cpp  SNDEMDEV.cpp  apple_sound_chip.cpp  apple_sound_chip.h  sound.cpp  sound.h
src/HW/VIA/: VIA2EMDV.cpp  VIAEMDEV.cpp  via.cpp  via.h  via1.cpp  via1.h  via2.cpp  via2.h
src/HW/VIDCARD/: VIDEMDEV.cpp  video.cpp  video.h
src/LANG/: INTLCHAR.cpp  INTLCHAR.h  intl_chars.cpp  intl_chars.h  strings_catalan.h  strings_czech.h  strings_dutch.h  strings_english.h  strings_french.h  strings_german.h  strings_italian.h  strings_polish.h  strings_portuguese_brazilian.h  strings_serbian_latin.h  strings_spanish.h
src/PATCHES/: HPMCHACK.h  ROMEMDEV.cpp  SCRNHACK.cpp  SONYDRV.cpp  happy_mac_hack.h  rom.cpp  rom.h  screen_hack.cpp  screen_hack.h  sony_driver_hack.cpp  sony_driver_hack.h
src/UI/: COMOSGLU.c  COMOSGLU.cpp  COMOSGLU.h  CONTROLM.cpp  CONTROLM.h  MYOSGLUE.h  clipboard_sdl2.cpp  common_os_glue.cpp  common_os_glue.h  control_mode.cpp  control_mode.h  dbglog.cpp  dbglog.h  debug_log_sdl2.cpp  drives_sdl2.cpp  event_queue.cpp  event_queue.h  intl_sdl2.cpp  keyboard_sdl2.cpp  math.h  memory.cpp  memory.h  mouse_sdl2.cpp  my_os_glue.h  os_glue.cpp  os_glue.h  os_glue_sdl2.cpp  os_glue_sdl2.h  rom_sdl2.cpp  sound_sdl2.cpp  sound_sdl2.h  time_date_sdl2.cpp  video_sdl2.cpp  video_sdl2.h
src/UI/SDL2/: CLIPBRD.cpp  DBGLOG.cpp  DRIVES.cpp  INTL.cpp  MOUSE.cpp  OSGLUSD2.cpp  ROM.c  ROM.cpp  SOUND.cpp  TIMEDATE.cpp  VIDEO.cpp  clipboard_sdl2.cpp  debug_log_sdl2.cpp  drives_sdl2.cpp  intl_sdl2.cpp  keyboard_sdl2.cpp  mouse_sdl2.cpp  os_glue_sdl2.cpp  os_glue_sdl2.h  rom_sdl2.cpp  sound_sdl2.cpp  sound_sdl2.h  time_date_sdl2.cpp  video_sdl2.cpp  video_sdl2.h
src/UTIL/: DATE2SEC.cpp  ENDIANAC.h  bp_filter.h  date_to_seconds.cpp  date_to_seconds.h  dbglog.cpp  dbglog.h  endian.h  param_buffers.cpp  param_buffers.h  powers.h
